gitTestProject/src/objects/Quote_Purchase__c.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Quote Line Item</relationshipLabel>
        <relationshipName>Quote_Purchase</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product1</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Purchase</relationshipLabel>
        <relationshipName>Quote_Purchase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote1__c</fullName>
        <label>Quote1</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Purchase Order</relationshipLabel>
        <relationshipName>Quote_Purchase</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <formula>Sales_Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Subtotal__c   -   ( Subtotal__c  *  ( Discount__c  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Quote Purchase</label>
    <nameField>
        <displayFormat>J-{0000}</displayFormat>
        <label>Quote Purchase Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Purchase</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>